force-app/main/default/objects/Chatter_Bot_Group_Member__c/Chatter_Bot_Group_Member__c.object-meta.xml
<CustomObject>
    <description>A record is created via trigger any time a user is added as a member to the Chatter Group that the parent Chatter Bot Group is monitoring. This allows you to setup Process Builder to be fired when these records are created so that you can take action on member assignments. This is a workaround until if or when Salesforce supports CollaborationGroupMember object in Process Builder.</description>
    <label>Chatter Bot Group Member</label>
    <nameField>
        <displayFormat>CBGM-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chatter Bot Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>