force-app/main/default/objects/Chatter_Bot_Group_Member__c/fields/Chatter_Bot_Group__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Bot_Group__c</fullName>
    <label>Chatter Bot Group</label>
    <referenceTo>Chatter_Bot_Group__c</referenceTo>
    <relationshipLabel>Chatter Bot Group Members</relationshipLabel>
    <relationshipName>Chatter_Bot_Group_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>