force-app/main/default/objects/Chatter_Bot_Group_Member__c/fields/Chatter_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Group_ID__c</fullName>
    <description>The Chatter Group ID this user is a member of.</description>
    <formula>Chatter_Bot_Group__r.Chatter_Group_ID__c</formula>
    <inlineHelpText>The Chatter Group ID this user is a member of.</inlineHelpText>
    <label>Chatter Group ID</label>
    <type>Text</type>
</CustomField>