force-app/main/default/objects/Chatter_Bot_Group_Member__c/fields/Chatter_Group_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Group_Member_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Chatter Group Member ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>