force-app/main/default/objects/Chatter_Bot_Group_Member__c/fields/Is_Member__c.field-meta.xml
<CustomField>
    <fullName>Is_Member__c</fullName>
    <defaultValue>true</defaultValue>
    <description>So that you can be notified when users are removed from groups, the trigger will on delete of CollaborationGroupMember records uncheck this field then delete this record. You can use Workflow or Process Builder to monitor for this field changing to know if user has been removed from the group.</description>
    <inlineHelpText>So that you can be notified when users are removed from groups, the trigger will on delete of CollaborationGroupMember records uncheck this field then delete this record. You can use Workflow or Process Builder to monitor for this field changing.</inlineHelpText>
    <label>Is Member?</label>
    <type>Checkbox</type>
</CustomField>